--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
 						        <div class="resume-skill-item">
 						            <h4 class="resume-skills-cat font-weight-bold">Otros</h4>
 						            <ul class="list-inline">
-							            <li class="list-inline-item"><span class="badge badge-light">Excel</span></li>
+							            <li class="list-inline-item"><span class="badge badge-light">Rocketbot</span></li>
+								    <li class="list-inline-item"><span class="badge badge-light">Excel</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Git</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">GitHub</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">WebPack</span></li>
