--- a/index.html
+++ b/index.html
@@ -313,6 +313,12 @@
 							    <ul class="list-unstyled resume-awards-list">
 								    <li class="mb-2 ps-4 position-relative">
 								        <i class="resume-award-icon fas fa-graduation-cap position-absolute" data-fa-transform="shrink-2"></i>
+								        <div class="resume-degree font-weight-bold">Rocketbot Suite Level 1.</div>
+								        <div class="resume-degree-org">Rocketbot.</div>
+								        <div class="resume-degree-time">2022</div>
+								    </li>
+								    <li class="mb-0 ps-4 position-relative">
+								        <i class="resume-award-icon fas fa-graduation-cap position-absolute" data-fa-transform="shrink-2"></i>
 								        <div class="resume-degree font-weight-bold">React - La Guía Completa: Hooks Context Redux MERN +15 Apps.</div>
 								        <div class="resume-degree-org">Udemy.</div>
 								        <div class="resume-degree-time">2022</div>
