--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							    <ul class="resume-social list-unstyled">
 					                <li class="mb-3"><a class="text-link" href="https://www.linkedin.com/in/nelson-gonzalez-g-b5b19754/" target="_blank"><span class="fa-container text-center me-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/nelson-gonzalez</a></li>
 					                <li class="mb-3"><a class="text-link" href="https://github.com/nelcho" target="_blank"><span class="fa-container text-center me-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/nelcho</a></li>
-									<li class="mb-3"><a class="text-link" href="https://www.google.com/maps/place/Bogot%C3%A1/@4.6482975,-74.107807,11z/data=!3m1!4b1!4m5!3m4!1s0x8e3f9bfd2da6cb29:0x239d635520a33914!8m2!3d4.7109886!4d-74.072092" target="_blank"><span class="fa-container text-center me-2"><i class="fa-sharp fa-solid fa-location-dot"></i></span>Bogotá D.C.</a></li>
+									<li class="mb-3"><a class="text-link" href="https://www.google.com/maps/place/Bogot%C3%A1/@4.5988546,-74.0812527,16z/data=!4m5!3m4!1s0x8e3f9bfd2da6cb29:0x239d635520a33914!8m2!3d4.7109886!4d-74.072092" target="_blank"><span class="fa-container text-center me-2"><i class="fa-sharp fa-solid fa-location-dot"></i></span>Bogotá D.C.</a></li>
 					                <li><a class="text-link" href="https://nelcho.github.io/" target="_blank"><span class="fa-container text-center me-2"><i class="fas fa-globe"></i></span>nelcho.github.io</a></li>
 							    </ul>
 						    </div><!--//secondary-info-->
